apps/plex/templates/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: plex
  labels:
    routed-gateway: "true"
