apps/plex/templates/networking-policy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-restricted
spec:
  podSelector: {}
  ingress:
    - from:
      # Only allow ingress from K8S
      - ipBlock:
          cidr: 10.0.0.0/8
  egress:
    - to:
      # Only allow egress to K8S
      - ipBlock:
          cidr: 10.0.0.0/8
  policyTypes:
    - Ingress
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-plex-egress
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values: ["plex", "overseerr"]
  egress:
    - {}
  policyTypes:
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-k8up-jobs
spec:
  podSelector:
    matchLabels:
      k8upjob: "true"
  egress:
    - {}
  policyTypes:
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-plex-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: plex
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 32400
    - protocol: TCP
      port: 1900
    - protocol: TCP
      port: 8324
    - protocol: UDP
      port: 32469
    - protocol: UDP
      port: 5353
    - protocol: UDP
      port: 32410
    - protocol: UDP
      port: 32412
    - protocol: UDP
      port: 32413
    - protocol: UDP
      port: 32414
